html { height: 100%; } fixes full screen bg on mobile android

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
 
+html {
+  height: 100%;
+}
+
 body {
   background: #333;
   background: url('nyc.jpg') no-repeat center center fixed;
@@ -17,5 +21,5 @@ h1 {
   text-align: center;
   color: rgba(255,255,255,0.8);
   margin: 0 auto;
-  margin-top: 5vh;
+  margin-top: 20vh;
 }
